# medlm

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-prod.yml
client/: .cta.json  .dockerignore  .env.example  Dockerfile  package.json  vite.config.ts
client/public/: manifest.json
client/src/: routeTree.gen.ts  styles.css
client/src/components/: AnalysisOverlay.tsx  BentoGridFeatures.tsx  Footer.tsx  (+9 more)
scripts/: deploy.sh  start-frontend.sh
server/: .gitignore  alembic.ini  pyproject.toml  start_server.sh  test_chat_tool.py  test_worker.py
server/alembic/: env.py
server/alembic/versions/: 1815ea57ea3f_sync_chat_models.py  226aac4b42b0_updated_tables.py  277f61155114_initial_migration.py  2aff35904949_add_file_hash_and_size_to_medical_record.py  40560b325462_update_trend_and_timeline_models.py  42c516012fa0_add_vitals_table.py  7b46bbaa9dd1_add_account_and_verification_tables_for_.py  9aa816929dcf_add_idtoken_to_account_model.py  dd471bc1c73a_add_timline_and_trend_table.py
server/app/: __init__.py  main.py  worker.py
server/app/api/: deps.py
server/app/api/routes/: analysis.py  chat.py  demo_auth.py  simplify.py  stream.py  upload.py
server/app/core/: celery_app.py  config.py  crypto.py  db.py  model_manager.py  utils.py
server/app/models/: __init__.py
server/app/services/: ai_service.py  dicom_service.py  extraction_service.py  gemini_service.py  llm_service.py  memory_service.py  pdf_service.py  storage.py  stream_service.py  vector_service.py
server/app/services/llm/: memory_service.py  signatures.py  tool_read_record.py
(+25 files in other folders)
